2007-01-14  Andrew John Hughes  <gnu_andrew@member.fsf.org>

	* javax/management/AttributeValueExp.java: New file.
	* javax/management/QueryEval.java: Likewise.
	* javax/management/StringValueExp.java: Likewise.
	
2007-01-14  Andrew John Hughes  <gnu_andrew@member.fsf.org>

	* javax/management/AttributeChangeNotificationFilter.java:
	New file.
	
2007-01-11  Andreas Tobler  <a.tobler@schweiz.org>

	* examples/gnu/classpath/examples/awt/AicasGraphicsBenchmark.java
	(AicasGraphicsBenchmark): Load images from ../icons.
	* examples/gnu/classpath/examples/java2d/J2dBenchmark.java (init):
	Likewise.
	* examples/Makefile.am (EXAMPLE_ICONS): Add rule to copy *.gif files
	to icons.
	* examples/gnu/classpath/examples/awt/aicas.png: Move to ../icons.
	Delete here.
	* examples/gnu/classpath/examples/awt/palme.gif: Likewise.
	* examples/gnu/classpath/examples/java2d/aicas.png: Likewise.
	* examples/gnu/classpath/examples/java2d/palme.gif: Likewise.
	* examples/gnu/classpath/examples/icons/aicas.png: Moved.
	* examples/gnu/classpath/examples/icons/palme.gif: Likewise.

2007-01-09  Tania Bento  <tbento@redhat.com>

	* java/security/Permission.java:
	(toString): If there are no actions, then there should not 
	be a space between its name and ')'.

2007-01-08  Andrew John Hughes  <gnu_andrew@member.fsf.org>

	* javax/management/AttributeChangeNotification.java:
	New file.
	
2007-01-08  Cameron McCormack  <cam@mcc.id.au>

	PR 30355
	* java/util/Arrays.java:
	(binarySearch(byte[],byte)): Added check for zero-length array.
	(binarySearch(short[],short)): Likewise.
	(binarySearch(int[],int)): Likewise.
	(binarySearch(long[],long)): Likewise.
	(binarySearch(char[],char)): Likewise.
	(binarySearch(float[],float)): Likewise.
	(binarySearch(double[],double)): Likewise.
	(binarySearch(Object[],Object)): Likewise.
	(binarySearch(T[],T,Comparator)): Likewise.

2007-01-08  Tom Tromey  <tromey@redhat.com>

	* tools/gnu/classpath/tools/native2ascii/Native2ASCII.java (run):