@@ -1,3 +1,7 @@
+2007-01-15  Kyle Galloway  <kgallowa@redhat.com>
+
+	* gnu/classpath/jdwp/exception/InvalidSlotException.java: New file.
+
 2007-01-14  Andrew John Hughes  <gnu_andrew@member.fsf.org>
 
 	* javax/management/AttributeValueExp.java: New file.
